storage-release/mysql.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: mysql-storage-release
  name: mysql-storage-release
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-storage-release
  template: 
    metadata: 
      labels:
        app: mysql-storage-release
    spec:
      containers:
      - image: mysql:5.7
        imagePullPolicy: IfNotPresent
        name: mysql-storage-release
        ports:
          - containerPort: 3306
        volumeMounts:
        - name: mysql-storage-release
          mountPath: "/var/lib/mysql"
      volumes:
        - name: mysql-storage-release
          persistentVolumeClaim:
            claimName: mysql-storage-release
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-storage-release
spec:
  selector: 
    app: mysql-storage-release
  type: NodePort
  ports: 
  - port: 3306
    nodePort: 23308
